@@ -6,7 +6,7 @@
     "major_version": 1,
     "minor_version": 1,
     "generator_name": "crystal-facet-uml",
-    "generator_version": "1.49.0"
+    "generator_version": "1.49.1"
   }
   ,
   "views":
@@ -7960,7 +7960,7 @@
         "type": "Stereotype",
         "name": "my_stereo",
         "description": [
-                "<path d=\"\n",
+                "<path d='\n",
                 "m 6,2\n",
                 "a 2,2 0 1 1 2,2\n",
                 "v 2\n",
@@ -7971,7 +7971,7 @@
                 "a 2,2 0 1 1 2,-2\n",
                 "h 2\n",
                 "l -1.3 0.9\n",
-                "\"/>"
+                "'/>"
         ],
         "x_order": -1541461619,
         "y_order": -1058675222,
@@ -8396,7 +8396,7 @@
         "type": "Stereotype",
         "name": "flower_as_paths",
         "description": [
-                "<path style=\"fill:none;stroke-width:1.575;stroke-linecap:butt;stroke-linejoin:miter;stroke:rgb(0%,0%,0%);stroke-opacity:1;stroke-miterlimit:10;\" d=\"M 478.859375 763.011719 C 478.859375 759.460938 475.980469 756.582031 472.429688 756.582031 C 468.878906 756.582031 466 759.460938 466 763.011719 C 466 766.5625 468.878906 769.441406 472.429688 769.441406 C 475.980469 769.441406 478.859375 766.5625 478.859375 763.011719 M 480.464844 763.011719 C 483.066406 762.984375 486.246094 764.039062 488.617188 765.714844 C 490.988281 767.390625 492.125 769.386719 491.527344 770.828125 C 490.925781 772.273438 488.707031 772.902344 485.828125 772.445312 C 482.953125 771.988281 479.941406 770.523438 478.113281 768.695312 C 479.96875 770.511719 481.472656 773.503906 481.964844 776.367188 C 482.457031 779.230469 481.851562 781.445312 480.40625 782.042969 C 478.960938 782.640625 476.945312 781.515625 475.234375 779.15625 C 473.523438 776.800781 472.429688 773.636719 472.429688 771.050781 C 472.457031 773.648438 471.40625 776.828125 469.726562 779.199219 C 468.050781 781.570312 466.058594 782.707031 464.613281 782.109375 C 463.171875 781.511719 462.539062 779.289062 462.996094 776.410156 C 463.457031 773.535156 464.917969 770.523438 466.75 768.695312 C 464.929688 770.554688 461.9375 772.054688 459.074219 772.546875 C 456.210938 773.039062 454 772.433594 453.402344 770.988281 C 452.800781 769.546875 453.925781 767.527344 456.285156 765.816406 C 458.640625 764.105469 461.804688 763.011719 464.394531 763.011719 C 461.792969 763.039062 458.613281 761.988281 456.242188 760.3125 C 453.871094 758.632812 452.734375 756.640625 453.335938 755.195312 C 453.933594 753.753906 456.15625 753.121094 459.03125 753.582031 C 461.90625 754.039062 464.917969 755.5 466.75 757.332031 C 464.890625 755.511719 463.386719 752.519531 462.894531 749.65625 C 462.402344 746.792969 463.011719 744.582031 464.453125 743.984375 C 465.898438 743.386719 467.914062 744.511719 469.625 746.867188 C 471.335938 749.226562 472.429688 752.386719 472.429688 754.976562 C 472.402344 752.375 473.457031 749.195312 475.132812 746.824219 C 476.808594 744.453125 478.804688 743.320312 480.246094 743.917969 C 481.691406 744.515625 482.320312 746.738281 481.863281 749.613281 C 481.40625 752.492188 479.941406 755.5 478.113281 757.332031 C 479.929688 755.472656 482.921875 753.96875 485.785156 753.476562 C 488.648438 752.984375 490.859375 753.59375 491.460938 755.035156 C 492.058594 756.480469 490.933594 758.496094 488.574219 760.207031 C 486.21875 761.917969 483.054688 763.011719 480.464844 763.011719 \"/>"
+                "<path fill=\"Hello World\" stroke='!' style=\"fill:none;stroke-width:1.575;stroke-linecap:butt;stroke-linejoin:miter;stroke:rgb(0%,0%,0%);stroke-opacity:1;stroke-miterlimit:10;\" d=\"M 478.859375 763.011719 C 478.859375 759.460938 475.980469 756.582031 472.429688 756.582031 C 468.878906 756.582031 466 759.460938 466 763.011719 C 466 766.5625 468.878906 769.441406 472.429688 769.441406 C 475.980469 769.441406 478.859375 766.5625 478.859375 763.011719 M 480.464844 763.011719 C 483.066406 762.984375 486.246094 764.039062 488.617188 765.714844 C 490.988281 767.390625 492.125 769.386719 491.527344 770.828125 C 490.925781 772.273438 488.707031 772.902344 485.828125 772.445312 C 482.953125 771.988281 479.941406 770.523438 478.113281 768.695312 C 479.96875 770.511719 481.472656 773.503906 481.964844 776.367188 C 482.457031 779.230469 481.851562 781.445312 480.40625 782.042969 C 478.960938 782.640625 476.945312 781.515625 475.234375 779.15625 C 473.523438 776.800781 472.429688 773.636719 472.429688 771.050781 C 472.457031 773.648438 471.40625 776.828125 469.726562 779.199219 C 468.050781 781.570312 466.058594 782.707031 464.613281 782.109375 C 463.171875 781.511719 462.539062 779.289062 462.996094 776.410156 C 463.457031 773.535156 464.917969 770.523438 466.75 768.695312 C 464.929688 770.554688 461.9375 772.054688 459.074219 772.546875 C 456.210938 773.039062 454 772.433594 453.402344 770.988281 C 452.800781 769.546875 453.925781 767.527344 456.285156 765.816406 C 458.640625 764.105469 461.804688 763.011719 464.394531 763.011719 C 461.792969 763.039062 458.613281 761.988281 456.242188 760.3125 C 453.871094 758.632812 452.734375 756.640625 453.335938 755.195312 C 453.933594 753.753906 456.15625 753.121094 459.03125 753.582031 C 461.90625 754.039062 464.917969 755.5 466.75 757.332031 C 464.890625 755.511719 463.386719 752.519531 462.894531 749.65625 C 462.402344 746.792969 463.011719 744.582031 464.453125 743.984375 C 465.898438 743.386719 467.914062 744.511719 469.625 746.867188 C 471.335938 749.226562 472.429688 752.386719 472.429688 754.976562 C 472.402344 752.375 473.457031 749.195312 475.132812 746.824219 C 476.808594 744.453125 478.804688 743.320312 480.246094 743.917969 C 481.691406 744.515625 482.320312 746.738281 481.863281 749.613281 C 481.40625 752.492188 479.941406 755.5 478.113281 757.332031 C 479.929688 755.472656 482.921875 753.96875 485.785156 753.476562 C 488.648438 752.984375 490.859375 753.59375 491.460938 755.035156 C 492.058594 756.480469 490.933594 758.496094 488.574219 760.207031 C 486.21875 761.917969 483.054688 763.011719 480.464844 763.011719 \"/>"
         ],
         "x_order": -1212936171,
         "y_order": -1060928158,
