@@ -2,6 +2,7 @@ crystal-facet-uml (1.49.1) UNRELEASED; urgency=medium
 
   [ Andreas Warnke ]
   * IDs of classifiers are not shown anymore, names are already unique
+  * in stereotype images, the svg path data may be stated in single-quotes
 
  -- Andreas Warnke <cfu@andreaswarnke.de>  Sat, 22 Apr 2023 14:00:00 +0200
 
